crates/search/tests/dynamic_search_rules/snapshots/mod.rs/full_lifecycle/list_rules.snap
---
source: crates/indexsearch/tests/dynamic_search_rules/mod.rs
---
{
  "results": [
    {
      "uid": "rule-a",
      "active": true,
      "conditions": [],
      "actions": [
        {
          "selector": {
            "id": "0"
          },
          "action": {
            "type": "pin",
            "position": 0
          }
        }
      ]
    },
    {
      "uid": "rule-b",
      "active": true,
      "conditions": [],
      "actions": [
        {
          "selector": {
            "id": "1"
          },
          "action": {
            "type": "pin",
            "position": 0
          }
        }
      ]
    }
  ],
  "offset": 0,
  "limit": 20,
  "total": 2
}
